examples/test/testpolicy639.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy639
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key40: value3
      key9: value10
      key46: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value19
      podSelector:
        matchLabels:
          key46: value19
